--- a/SC2001_Project2/Advait/test.ipynb
+++ b/SC2001_Project2/Advait/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
       " inf  inf  inf  inf    0 \n",
       "\n",
       "[1, 1, 1, 1, 1] [0, 4, 2, 3, 6] [0, 1, 1, 3, 4]\n",
-      "Elapsed Time: 0.00012803077697753906s\n",
+      "Elapsed Time: 0.0001232624053955078s\n",
       "1 ->  (2, 4) (3, 2) (4, 6) (5, 8) \n",
       "\n",
       "2 ->  (4, 4) (5, 3) \n",
@@ -241,7 +241,7 @@
       "5 ->  \n",
       "\n",
       "[1, 1, 1, 1, 1] [0, 4, 2, 3, 6] [0, 1, 1, 3, 4]\n",
-      "Elapsed Time: 0.00010609626770019531s\n"
+      "Elapsed Time: 0.00011181831359863281s\n"
      ]
     }
    ],
@@ -284,22 +284,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Same vertex 6431 and 6431\n",
-      "Same vertex 6731 and 6731\n",
-      "Same vertex 7601 and 7601\n",
-      "Same vertex 817 and 817\n",
-      "Same vertex 1828 and 1828\n",
-      "Same vertex 7082 and 7082\n",
-      "Same vertex 8636 and 8636\n",
-      "Elapsed Time: 37.216787338256836s\n",
-      "Elapsed Time: 11.818991899490356s\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# generate a random graphs with 1000 vertices and 10000 edges\u001b[39;00m\n\u001b[1;32m      2\u001b[0m s \u001b[39m=\u001b[39m \u001b[39m10000\u001b[39m\n\u001b[0;32m----> 3\u001b[0m g \u001b[39m=\u001b[39m Graph(s)\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m100000\u001b[39m):\n\u001b[1;32m      6\u001b[0m     u \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, s)\n",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m, in \u001b[0;36mGraph.__init__\u001b[0;34m(self, size)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39m# Adjacency Matrix\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(size):\n\u001b[0;32m---> 16\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madjMatrix\u001b[39m.\u001b[39mappend([\u001b[39mfloat\u001b[39m(\u001b[39m'\u001b[39m\u001b[39minf\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mif\u001b[39;00m i \u001b[39m!=\u001b[39m j \u001b[39melse\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(size)])\n\u001b[1;32m     18\u001b[0m \u001b[39m# Adjacency List \u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(size): \n",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39m# Adjacency Matrix\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(size):\n\u001b[0;32m---> 16\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madjMatrix\u001b[39m.\u001b[39mappend([\u001b[39mfloat\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39minf\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mif\u001b[39;00m i \u001b[39m!=\u001b[39m j \u001b[39melse\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(size)])\n\u001b[1;32m     18\u001b[0m \u001b[39m# Adjacency List \u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(size): \n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -341,7 +339,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.1"
   },
   "orig_nbformat": 4
